@@ -25,8 +25,17 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.time.Duration;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.stream.Stream;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.SessionNotCreatedException;
 import org.openqa.selenium.internal.Require;
@@ -101,7 +110,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addArguments(List)
    */
   public T addArguments(String... arguments) {
-    addArguments(Arrays.asList(arguments));
+    addArguments(List.of(arguments));
     return (T) this;
   }
 
@@ -129,7 +138,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addExtensions(List)
    */
   public T addExtensions(File... paths) {
-    addExtensions(Arrays.asList(paths));
+    addExtensions(List.of(paths));
     return (T) this;
   }
 
@@ -150,7 +159,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addEncodedExtensions(List)
    */
   public T addEncodedExtensions(String... encoded) {
-    addEncodedExtensions(Arrays.asList(encoded));
+    addEncodedExtensions(List.of(encoded));
     return (T) this;
   }
 
@@ -272,6 +281,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
   }
 
   @Override
+  @Nullable
   protected Object getExtraCapability(String capabilityName) {
     Require.nonNull("Capability name", capabilityName);
 
